Add shadcn components

--- a/src/index.css
+++ b/src/index.css
@@ -30,14 +30,14 @@
     --chart-2: 340 75% 55%;
     --radius: 0.5rem;
 
-    --sidebar-background: 120 8% 15%;
-    --sidebar-foreground: 120 2% 95%;
-    --sidebar-primary: 119 50% 58%;
-    --sidebar-primary-foreground: 136 16% 9%;
-    --sidebar-accent: 120 6% 20%;
-    --sidebar-accent-foreground: 120 2% 95%;
-    --sidebar-border: 120 6% 20%;
-    --sidebar-ring: 119 50% 58%;
+    --sidebar-background: 0 0% 98%;
+    --sidebar-foreground: 240 5.3% 26.1%;
+    --sidebar-primary: 240 5.9% 10%;
+    --sidebar-primary-foreground: 0 0% 98%;
+    --sidebar-accent: 240 4.8% 95.9%;
+    --sidebar-accent-foreground: 240 5.9% 10%;
+    --sidebar-border: 220 13% 91%;
+    --sidebar-ring: 217.2 91.2% 59.8%;
   }
 
   .light {
@@ -74,6 +74,16 @@
     --sidebar-accent-foreground: 240 5.9% 10%;
     --sidebar-border: 220 13% 91%;
     --sidebar-ring: 119 50% 58%;
+  }
+  .dark {
+    --sidebar-background: 240 5.9% 10%;
+    --sidebar-foreground: 240 4.8% 95.9%;
+    --sidebar-primary: 224.3 76.3% 48%;
+    --sidebar-primary-foreground: 0 0% 100%;
+    --sidebar-accent: 240 3.7% 15.9%;
+    --sidebar-accent-foreground: 240 4.8% 95.9%;
+    --sidebar-border: 240 3.7% 15.9%;
+    --sidebar-ring: 217.2 91.2% 59.8%;
   }
 }
 
